# sonar-issue-exporter

./: .gitattributes  .gitignore  LICENSE  README.md  export_sonar_issue.py  pyproject.toml  requirements.txt  sample.env  watch_clipboard.py
.github/workflows/: sonarcloud.yml
ai/chat/: 0.1.0.md  0.1.2-pyproject.md  0.1.2.md  0.2.0.md
archive/0.1.1/: 0.1.1.md
archive/0.1.2/: 0.1.2-pyproject.md
archive/0.1.2/issues/Dependency_versions_are_not_predictable_if_the_lock_file_(uv.lock_or_poetry.lock/: Lunknown.json
archive/0.1.2/issues/Refactor_this_function_to_reduce_its_Cognitive_Complexity/: L128.json
archive/0.2.0/: 0.2.0.md
archive/0.2.0/issues/Remove_this_redundant_Exception_class;_it_derives_from_another_which_is_already/: L96.json
