[project]
name = "sonar-issue-exporter"
version = "0.2.0"
description = "Export SonarQube Cloud issues to AI-readable text files"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "requests>=2.33.0",
    "pyperclip",
]

[project.optional-dependencies]
markdown = ["html2text"]

[project.scripts]
sonar-export = "export_sonar_issue:main"
sonar-watch = "watch_clipboard:main"
